<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#2768A5"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="470dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="324dp"
            android:layout_height="180dp"
            app:srcCompat="@drawable/untitled_2"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"

            android:text="@string/Wecareforyou"
            android:textColor="#FFD246"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/EnterEmail"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:background="#ffff"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="37dp"
            android:hint="@string/Username"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:textSize="20dp"

            />

        <EditText
            android:id="@+id/EnterPassword"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="37dp"
            android:background="#ffff"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="9dp"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded"
            android:text="@string/SignIn"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="23dp"


            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donthaveaccount"
            android:textSize="16dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:gravity="center"
            android:textColor="#FFFF"
            android:textSize="16dp"
            android:textStyle="bold" />



        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/langbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ChangeLanguage" />


    </LinearLayout>
</RelativeLayout>