<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2768A5"
    tools:context=".EditProfilePage">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/Profile"
            android:textColor="#FFD246"
            android:textSize="40dp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="145dp"
            android:layout_height="105dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/image" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="12dp"
            android:background="#2768A5"
            android:textColor="#FFFFFF"
            android:padding="9dp"
            android:text="@string/Name"
            android:textSize="25dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/Name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:drawablePadding="12dp"
            android:background="@drawable/rounded"
            android:padding="9dp"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:backgroundTint="#2768A5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="12dp"
            android:background="#2768A5"
            android:textColor="#FFFFFF"
            android:padding="9dp"
            android:text="@string/Date_Of_Birth"
            android:textSize="25dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/dob1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:drawablePadding="12dp"
            android:background="@drawable/rounded"
            android:padding="9dp"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:backgroundTint="#2768A5"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="12dp"
            android:backgroundTint="#2768A5"
            android:textColor="#FFFFFF"
            android:padding="9dp"
            android:text="@string/Address"
            android:textSize="25dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/Address1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:drawablePadding="12dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#2768A5"
            android:textColor="#FFFFFF"
            android:padding="9dp"
            android:textSize="20dp" />/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="12dp"
            android:backgroundTint="#2768A5"
            android:textColor="#FFFFFF"
            android:padding="9dp"
            android:text="@string/Emergency_Contact"
            android:textSize="25dp"
            android:textStyle="bold"/>/>
        <EditText
            android:id="@+id/EnterEmergency1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:drawablePadding="12dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/rounded"
            android:backgroundTint="#2768A5"
            android:padding="9dp"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/Confirm1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="-45dp"
            android:drawablePadding="12dp"
            android:backgroundTint="#2768A5"
            android:textColor="#FFFFFF"
            android:padding="9dp"
            android:textAlignment="center"
            android:text="@string/Confirm"
            android:textSize="20dp"
            android:textStyle="bold"/>/>

    </LinearLayout>

</RelativeLayout>